2018-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add legend PDF name aliasing to plotpdfs

2018-11-01  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Explicitly catch x > xMax error in ContinuationExtrapolator.

2018-10-24  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Update lhapdf download script for new HepForge base URL and
	don't require the presence of Content-Length in HTTP header.

2018-10-19  Andy Buckley  <andy.buckley@cern.ch>

	* Utils.h: Fix separator bug in join() function. Thanks to Dmitry Kalinkin.

2018-08-20  Andy Buckley  <andy.buckley@cern.ch>

	* Remove 'const's from return-by-value types in KnotArray.h, to keep icpc happy.

2018-05-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add lhapdf_lambda4/5 functions in the Fortran interface.

	* Remove unwanted pid argument from the Fortran xfx*_stdpartons functions.

2018-01-25  Andy Buckley  <andy.buckley@cern.ch>

	* Move Config::get() static function from header to .cc, since a
	singleton needs to only 'live' in one compilation unit.

2017-09-05  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.2.1!

2017-09-04  Andy Buckley  <andy.buckley@cern.ch>

	* Fix signed/unsigned comparison in Fortran interface.

2017-08-31  Andy Buckley  <andy.buckley@cern.ch>

	* Fix ccstr_to_fstr function, and hence several problems in the LHAGlue Fortran interface.

2017-08-28  Andy Buckley  <andy.buckley@cern.ch>

	* Use lhapdf Python module in lhapdf script, to avoid YAML-parsing problems.

2017-08-27  Andy Buckley  <andy.buckley@cern.ch>

	* Extend Python xfxQ and xfxQ2 functions to allow multiple PID
	values and 2-arg versions which return all PIDs.

2017-08-25  Andy Buckley  <andy.buckley@cern.ch>

	* Make alphaS, interpolator, and extrapolator setting eager rather than lazy.

	* Remove unique_ptr from the public PDF.h header for now, for C++98 API compatibility.

2017-08-10  Andy Buckley  <andy.buckley@cern.ch>

	* Eliminate C++11 features from headers, and moving some oversized inlines into .cc files.
