@@ -1,3 +1,8 @@
+2019-03-29  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Apply compiler optimisation bypass "volatile" hack to default
+	data path insertion. Thanks to Zahari Kassabov.
+
 2018-12-17  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add legend PDF name aliasing to plotpdfs
